Inner Tour and Fixed Companies Table Collapse

--- a/src/index.css
+++ b/src/index.css
@@ -153,14 +153,17 @@ span {
   color: #ff0000;
 }
  
-.dashboardIntroTooltip .introjs-tooltip-title, .dashboardIntroTooltip .introjs-tooltiptext, .dashboardIntroTooltip2 .introjs-tooltip-title, .dashboardIntroTooltip2 .introjs-tooltiptext{
+.dashboardIntroTooltip .introjs-tooltip-title, .dashboardIntroTooltip .introjs-tooltiptext{
   color: #000
 }
-.dashboardIntroTooltip .introjs-tooltip-title, .dashboardIntroTooltip2 .introjs-tooltip-title  {
+.dashboardIntroTooltip .introjs-tooltip-title{
   font-size: 24px;
 }
-.dashboardIntroTooltip .introjs-tooltiptext, .dashboardIntroTooltip2 .introjs-tooltiptext {
+.dashboardIntroTooltip .introjs-tooltiptext{
   font-size: 20px;
+}
+.introjs-tooltiptext div{
+  margin-bottom: 10px;
 }
 .introjs-tooltiptext span, .svgIcon{
   display: inline-block;
@@ -185,10 +188,18 @@ span {
   max-width: 500px;
 }
 .dashboardIntroTooltip2 {
-  min-width: 1150px;
-  max-width: 1100px;
+  min-width: 1290px;
+  max-width: 1290px;
 }
-.dashboardIntroTooltip ul, .dashboardIntroTooltip2 ul {
+.dashboardIntroTooltip4 {
+  min-width: 975px;
+  max-width: 975px;
+}
+.dashboardIntroTooltip3 {
+  min-width: 650px;
+  max-width: 650px;
+}
+.dashboardIntroTooltip ul {
   padding-left: 20px;
 }
 .dashboardHighlightClass, .dashboardHighlightClass1{
